update html css

--- a/Main/Main1/main1_index.html
+++ b/Main/Main1/main1_index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../font/fontawesome-free-6.4.2-web/css/all.min.css">
 </head>
 <body>
-    <div class="haeder" id="header">
+    <div class="header" id="header">
 
     </div>
 
@@ -21,23 +21,23 @@
         </div>
         <div class="container__center" id="container__center">
             <div class="container__center--left">
-                <img class="img" src="../img/cakes_cheese.jpg" height="100px" width="100px"/>
+                <img class="img" src="../img/cakes_cheese.jpg"/>
             </div>
             <div class="container__center--right center__right">
                 <div class="center__right--title right__title">
-                        <h3 class="right__title--name">Bánh Kem vị chocolate</h3>
-                        <h3 class="right__title--price">1500000</h3>
+                        <h3 class="right__title--name">Bánh Kem phô mai chảy </h3>
+                        <h3 class="right__title--price">150.000đ</h3>
                         <p class="right__title--introduce">Đây là một loại bánh rất phụ hợp trong các buỗi tiệc sinh nhật, tiệc trà.</p>
                 </div>
                 <div class="center__right--detail right__detail">
                     <ul class="right__detail--list detail__list">
                         <li class="detail__list--item">Kích thước: 3.5x7.5 cm, khối lượng 40g/bánh</li>
-                        <li class="detail__list--item">Thành phần: bơ, bột, mì, đường, trứng, sữa, caream cheese, đậu đỏ</li>
+                        <li class="detail__list--item">Thành phần: bơ, bột, mì, đường, trứng, sữa, caream cheese</li>
                         <li class="detail__list--item">Bánh được làm và nướng nóng sau khi khách đặt, tươi mới mỗi ngày.</li>
                     </ul>
                 </div>
                 <div class="center__right--discount right__discount">
-                    <div class="right__discount--btn discount__btn">
+                    <div class="right__discount--btn discount__btn1">
                         <button class="discount__btn">KHUYẾN MÃI-ƯU ĐÃI</button>
                     </div>
                     <div class="right__discount--title discount__title">
